# TurtleTrafficController

./: .gitmodules  CMakeLists.txt  FieldController.hpp  GPSInformation.hpp  GetIterator.hpp  HttpException.hpp  Main.cpp  ProtectionAreaController.hpp  ProtectionAreaInformation.hpp  README.md  TurtleTrafficController.hpp
config/: fields.json  protection-area.json  server.json
systemd/: trafficctrl.service
